--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/AI Setup Project/AI Setup Project-cache
+/AI Setup Project/AI Setup Project-SetupFiles
