Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,5 @@ steps:
     version: 6.0.x
 - task: MicrosoftSecurityDevOps@1
   displayName: 'Microsoft Security DevOps'
+  inputs:
+    categories: 'secrets'
