--- a/.gitignore
+++ b/.gitignore
@@ -157,11 +157,11 @@ PublishScripts/
 # NuGet Packages
 *.nupkg
 # The packages folder can be ignored because of Package Restore
-#**/packages/*
+**/packages/*
 # except build/, which is used as an MSBuild target.
-#!**/packages/build/
+!**/packages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
-#!**/packages/repositories.config
+!**/packages/repositories.config
 # NuGet v3's project.json files produces more ignoreable files
 *.nuget.props
 *.nuget.targets
@@ -266,4 +266,3 @@ __pycache__/
 /AI Setup Project/AzureDevOpsBackup Installer-SetupFiles
 /AdvancedInstaller/AzureDevOpsBackup Installer-cache
 /AdvancedInstaller/AzureDevOpsBackup Installer-SetupFiles
-/AzureDevOpsBackup/packages/Newtonsoft.Json.13.0.3
