--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,7 @@ PublishScripts/
 # NuGet v3's project.json files produces more ignoreable files
 *.nuget.props
 *.nuget.targets
+/packages/*/
 
 # Microsoft Azure Build Output
 csx/
