--- a/.gitignore
+++ b/.gitignore
@@ -165,7 +165,7 @@ PublishScripts/
 # NuGet v3's project.json files produces more ignoreable files
 *.nuget.props
 *.nuget.targets
-/AzureDevOpsBackup/packages/*/
+/AzureDevOpsBackup/packages
 
 # Microsoft Azure Build Output
 csx/
