Added Class to secure the token for authentication to the Azure DevOps API and some cleanup. Updated readme.

--- a/AzureDevOpsBackup/AzureDevOpsBackup.csproj
+++ b/AzureDevOpsBackup/AzureDevOpsBackup.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Class\ReportSender.cs" />
     <Compile Include="Class\FileLogger.cs" />
     <Compile Include="Class\Files.cs" />
+    <Compile Include="Class\SecureArgumentHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
