Add count for current backups in backup folder, add cleanuplog class, edit email report

--- a/AzureDevOpsBackup/AzureDevOpsBackup.csproj
+++ b/AzureDevOpsBackup/AzureDevOpsBackup.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class\Backups.cs" />
+    <Compile Include="Class\CleanupLog.cs" />
     <Compile Include="Class\Folders.cs" />
     <Compile Include="Class\DisplayHelp.cs" />
     <Compile Include="Class\Globals.cs" />
