--- a/AzureDevOpsBackup/packages.config
+++ b/AzureDevOpsBackup/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="2.9.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="RestSharp" version="106.15.0" targetFramework="net48" />
