--- a/AzureDevOpsBackup/AzureDevOpsBackup.csproj
+++ b/AzureDevOpsBackup/AzureDevOpsBackup.csproj
@@ -115,6 +115,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class\ApplicationInfo.cs" />
     <Compile Include="Class\Backups.cs" />
     <Compile Include="Class\CleanupLog.cs" />
     <Compile Include="Class\CommandLineParser.cs" />
