--- a/AzureDevOpsBackupUnzipTool/AzureDevOpsBackupUnzipTool.csproj
+++ b/AzureDevOpsBackupUnzipTool/AzureDevOpsBackupUnzipTool.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class\ApplicationInfo.cs" />
+    <Compile Include="Class\ApplicationStatus.cs" />
     <Compile Include="Class\DisplayHelp.cs" />
     <Compile Include="Class\FileLogger.cs" />
     <Compile Include="Class\Files.cs" />
