--- a/AzureDevOpsBackup/packages.config
+++ b/AzureDevOpsBackup/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.9.1" targetFramework="net48" />
+  <package id="LibGit2Sharp" version="0.31.0" targetFramework="net48" />
+  <package id="LibGit2Sharp.NativeBinaries" version="2.0.323" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="RestSharp" version="112.1.0" targetFramework="net48" />
