--- a/AzureDevOpsBackup/AzureDevOpsBackup.csproj
+++ b/AzureDevOpsBackup/AzureDevOpsBackup.csproj
@@ -130,7 +130,7 @@
     <Compile Include="Class\LocalLogCleanup.cs" />
     <Compile Include="Class\CommandLineParser.cs" />
     <Compile Include="Class\LocalFolderTasks.cs" />
-    <Compile Include="Class\DisplayHelp.cs" />
+    <Compile Include="Class\ConsoleHelper.cs" />
     <Compile Include="Class\Globals.cs" />
     <Compile Include="Class\Options.cs" />
     <Compile Include="Class\ReportSender.cs" />
