--- a/AzureDevOpsBackup/AzureDevOpsBackup.csproj
+++ b/AzureDevOpsBackup/AzureDevOpsBackup.csproj
@@ -132,7 +132,7 @@
     <Compile Include="Class\LocalFolderTasks.cs" />
     <Compile Include="Class\ConsoleHelper.cs" />
     <Compile Include="Class\Globals.cs" />
-    <Compile Include="Class\Options.cs" />
+    <Compile Include="Class\ArgumentOptions.cs" />
     <Compile Include="Class\ReportSender.cs" />
     <Compile Include="Class\FileLogger.cs" />
     <Compile Include="Class\Files.cs" />
